Updated, grade finished :)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <img style="display: block; margin: auto;"src="http://www.gravatar.com/avatar/4de8d654bf7cffcbd7bbc18fd3bc1e34?s=150" height="150" class="img-circle" alt="ismaelrh">
     <div class="row text-center"><h1>Ismael Rodríguez Hernández</h1></div>
-      <div class="row text-center"><h3><em>Almost</em> Computer Engineer</h3></div>
+      <div class="row text-center"><h3>Computer Scientist &amp; Engineer</h3></div>
     <div class="row">
       <div class="col-lg-12">
         <h1 class="page-header">
@@ -81,7 +81,7 @@
         <li><strong>Born:</strong> July 18th 1994, Girona, Spain</li>
         <li><strong>eMail:</strong> ismaro.394 <em>at</em> gmail <em>dot</em> com</li>
         <li><strong>Github:</strong> <a href="http://github.com/ismaro3">ismaro3</a></li>
-        <li><strong>LinkedIn:</strong> <a href="http://es.linkedin.com/in/ismaelrh">ismaro3</a></li>
+        <li><strong>LinkedIn:</strong> <a href="http://es.linkedin.com/in/ismaelrh">ismaelrh</a></li>
       </ul>
 
     </div>
@@ -95,6 +95,13 @@
       </div>
     </div>
 
+
+    <div class="row" style="margin-top:20px;">
+      <div class="col-xs-3">To start in September 2016</div>
+      <div class="col-xs-9">
+        <strong>Master in Innovation and Research in Informatics (Service Engineering)</strong> student at Universidad Politècnica de Catalunya, Spain.
+      </div>
+      </div>
       <div class="row" style="margin-top:20px;">
         <div class="col-xs-3">2012-July 2016</div>
         <div class="col-xs-9">
@@ -123,7 +130,7 @@
 
 
         <div class="row">
-          <div class="col-xs-3">Nov. 2015 - Present</div>
+          <div class="col-xs-3">Nov. 2015 - June 2016</div>
           <div class="col-xs-9">Collaboration as an undergraduated student with the Distributed Information Systems Research Group (SID) at University of Zaragoza, developing and improving Infoboxer.</div>
         </div>
 
@@ -151,6 +158,23 @@
             </h1>
           </div>
         </div>
+
+
+
+
+        <div class="row" style="margin-top:20px;">
+          <div class="col-xs-3">4 July 2016</div>
+          <div class="col-xs-9">My Final Degree Project "Development of a system to populate Knowledge Bases on
+the Web of Data" was presented, obtaining an evaluation of 9.5 out of 10 with honors. <a href="https://deposita.unizar.es/record/28588" target="_blank">Access to full text</a>.
+          </div>
+          </div>
+
+        <div class="row" style="margin-top:20px;">
+          <div class="col-xs-3">June 2016</div>
+          <div class="col-xs-9">Demo paper "WikInfoboxer: A Tool to Create Wikipedia Infoboxes Using DBpedia" has been accepted in the XXI Jornadas de Ingeniería
+del Software y Bases de Datos (JISBD) with very good evaluations.
+          </div>
+          </div>
 
         <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">April 2016</div>
