--- a/projects.html
+++ b/projects.html
@@ -74,12 +74,13 @@
         <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="http://sid.cps.unizar.es/Infoboxer" target="_blank">
-                  <img class="img-responsive" src="images/infoboxer.png" alt="Wallapoints">
+                  <img class="img-responsive" src="images/infoboxer.png" alt="Infoboxer">
               </a>
               <h3>
                   <a href="http://sid.cps.unizar.es/Infoboxer" target="_blank">Infoboxer</a>
               </h3>
-              <p>System that helps users to create rich and accurate Wikipedia Infoboxes, using statistical and semantic knowledge from linked data sources.</p>
+              <p><b>Final Degree Project</b></p>
+              <p>System that helps users to create rich and accurate content for Knowledge Bases and Wikipedia Infoboxes, using statistical and semantic knowledge from linked data sources and the Semantic Web.</p>
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Spring Framework (Java) + AngularJS</p>
           </div>
