Finapps, keystone, CV updated

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
         <li><strong>Name:</strong> Ismael Rodríguez Hernández</li>
         <li><strong>Born:</strong> July 18th 1994, Girona, Spain</li>
+        <li><strong>Current place:</strong> Barcelona, Spain</li>
         <li><strong>eMail:</strong> ismaro.394 <em>at</em> gmail <em>dot</em> com</li>
         <li><strong>Github:</strong> <a href="http://github.com/ismaro3">ismaro3</a></li>
         <li><strong>LinkedIn:</strong> <a href="http://es.linkedin.com/in/ismaelrh">ismaelrh</a></li>
@@ -97,7 +98,7 @@
 
 
     <div class="row" style="margin-top:20px;">
-      <div class="col-xs-3">To start in September 2016</div>
+      <div class="col-xs-3">September 2016 - Now</div>
       <div class="col-xs-9">
         <strong>Master in Innovation and Research in Informatics (Service Engineering)</strong> student at Universidad Politècnica de Catalunya, Spain.
       </div>
@@ -129,11 +130,15 @@
         </div>
 
 
-        <div class="row">
+
+        <div class="row" >
+          <div class="col-xs-3">July 2016</div>
+          <div class="col-xs-9">Attendee at "Keyword search in Big Linked Data" summer course and Hackathon, CITIUS, Santiago de Compostela.</div>
+        </div>
+        <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">Nov. 2015 - June 2016</div>
           <div class="col-xs-9">Collaboration as an undergraduated student with the Distributed Information Systems Research Group (SID) at University of Zaragoza, developing and improving Infoboxer.</div>
         </div>
-
         <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">Nov. 2015</div>
           <div class="col-xs-9">Finapps Party 2015 participator at Barcelona.</div>
@@ -161,6 +166,12 @@
 
 
 
+        <div class="row" >
+          <div class="col-xs-3">22 July 2016</div>
+          <div class="col-xs-9">First Prize in Keystone Hackaton, "Keyword Search in Big Linked Data", with my team (Borja Espejo, Raúl Piracés and I).
+          </div>
+          </div>
+
 
         <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">4 July 2016</div>
@@ -180,7 +191,7 @@ del Software y Bases de Datos (JISBD) with very good evaluations.
           <div class="col-xs-3">April 2016</div>
           <div class="col-xs-9">Applied for a Wikimedia IEG Grant to transform the research prototype
             Infoboxer into WikInfoboxer, a tool ready for Wikipedia/Wikimedia
-            editors. Pending of approval. <a href="https://meta.wikimedia.org/wiki/Grants:IEG/WikInfoboxer" target="_blank">More information</a>.
+            editors. <a href="https://meta.wikimedia.org/wiki/Grants:IEG/WikInfoboxer" target="_blank">More information</a>.
           </div>
           </div>
 
