--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,17 @@
         <!-- Projects Row -->
         <div class="row">
           <div class="col-md-4 portfolio-item">
+              <a href="https://github.com/borjaeg/keystone" target="_blank">
+                  <img class="img-responsive" src="images/keystone.png" alt="Linked Data Hurricanes Info">
+              </a>
+              <h3>
+                  <a href="https://github.com/borjaeg/keystone" target="_blank">Linked Data Hurricanes Info</a>
+              </h3>
+              <p>Web application that shows in an interactive map the zones affected by hurricanes. For that, it uses Open and Linked Data from DBPedia and Geonames.
+              <p><b>Platform: </b> Web</p>
+              <p><b>Technologies</b>: Java Spark + Javascript</p>
+          </div>
+          <div class="col-md-4 portfolio-item">
               <a href="http://sid.cps.unizar.es/Infoboxer" target="_blank">
                   <img class="img-responsive" src="images/infoboxer.png" alt="Infoboxer">
               </a>
@@ -95,23 +106,24 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: NodeJS with Express + AngularJS</p>
           </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="https://ismaro3.github.io/zgztram" target="_blank">
-                    <img class="img-responsive" src="images/zgztram.png" alt="">
-                </a>
-                <h3>
-                    <a href="https://ismaro3.github.io/zgztram" target="_blank">ZGZ-Tram</a>
-                </h3>
-                <p>A simple web application that shows Zaragoza's Tramway times on a map, using Zaragoza OpenData.</p>
-                <p><b>Platform: </b> Web</p>
-                <p><b>Technologies</b>: AngularJS</p>
-            </div>
+
 
         </div>
         <!-- /.row -->
 
         <!-- Projects Row -->
         <div class="row">
+          <div class="col-md-4 portfolio-item">
+              <a href="https://ismaro3.github.io/zgztram" target="_blank">
+                  <img class="img-responsive" src="images/zgztram.png" alt="">
+              </a>
+              <h3>
+                  <a href="https://ismaro3.github.io/zgztram" target="_blank">ZGZ-Tram</a>
+              </h3>
+              <p>A simple web application that shows Zaragoza's Tramway times on a map, using Zaragoza OpenData.</p>
+              <p><b>Platform: </b> Web</p>
+              <p><b>Technologies</b>: AngularJS</p>
+          </div>
           <div class="col-md-4 portfolio-item">
               <a href="https://ismaro3.github.io/Java-chip8-emulator" target="_blank">
                   <img class="img-responsive" src="images/chip8.png" alt="">
@@ -123,7 +135,27 @@
               <p><b>Platform: </b> Windows/Linux/MacOS</p>
               <p><b>Technologies</b>: Java</p>
           </div>
+          <div class="col-md-4 portfolio-item">
+              <a href="https://github.com/WallaTeam/FinApps15-App" target="_blank">
+                  <img class="img-responsive" src="images/pocketshop.png" alt="PocketShop!">
+              </a>
+              <h3>
+                  <a href="https://github.com/WallaTeam/FinApps15-App" target="_blank">PocketShop!</a>
+              </h3>
+              <p>A solution for small business that provides a stock, client and sales management system, using a Raspberry Pi and one or more Android devices. </p>
+              <p><b>Platform: </b> Android / Raspberry Pi</p>
+              <p><b>Technologies</b>: Java, AngularJS + Ionic, Python</p>
+          </div>
 
+
+
+
+
+
+        </div>
+
+        <!-- Projects Row -->
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/Twitter-Contest-Bot" target="_blank">
                   <img class="img-responsive" src="images/twitterbot.png" alt="">
@@ -135,24 +167,18 @@
               <p><b>Platform: </b> Windows/Linux/MacOS</p>
               <p><b>Technologies</b>: Java</p>
           </div>
+
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">
                   <img class="img-responsive" src="images/sanlorenzo.png" alt="">
               </a>
               <h3>
-                  <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">San Lorenzo 2015</a>
+                  <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">San Lorenzo App</a>
               </h3>
-              <p>Mobile app that contains an interactive guide of San Lorenzo 2015 festivities at Huesca. Includes maps, images and favourites among other information.</p>
+              <p>Mobile app that contains an interactive guide of San Lorenzo festivities at Huesca. Includes maps, images and favourites among other information. Updated every year.</p>
               <p><b>Platform: </b> Android + iOS (Web)</p>
               <p><b>Technologies</b>: AngularJS + Ionic</p>
           </div>
-
-
-
-        </div>
-
-        <!-- Projects Row -->
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/WallaTeam/WallaLinks" target="_blank">
                   <img class="img-responsive" src="images/wallalinks.png" alt="">
@@ -164,6 +190,12 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Spring Framework (Java) + ExpressJS</p>
           </div>
+
+
+
+        </div>
+
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://2015.spaceappschallenge.org/project/cropper/" target="_blank">
                   <img class="img-responsive" src="images/cropper.png" alt="">
@@ -176,21 +208,17 @@
                <p><b>Platform: </b> Web</p>
                <p><b>Technologies</b>: NodeJS + AngularJS</p>
           </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="https://github.com/WallaTeam/Wallapet" target="_blank">
-                    <img class="img-responsive" src="images/wallapet.png" alt="">
-                </a>
-                <h3>
-                    <a href="https://github.com/WallaTeam/Wallapet" target="_blank">WallaPet</a>
-                </h3>
-                <p>Android app for making simple deals between sellers/buyers of Animals and Animals in adoption.</p>
-                <p><b>Platform: </b> Android</p>
-                <p><b>Technologies</b>: Android SDK + JavaEE</p>
-            </div>
-
-        </div>
-
-        <div class="row">
+          <div class="col-md-4 portfolio-item">
+              <a href="https://github.com/WallaTeam/Wallapet" target="_blank">
+                  <img class="img-responsive" src="images/wallapet.png" alt="">
+              </a>
+              <h3>
+                  <a href="https://github.com/WallaTeam/Wallapet" target="_blank">WallaPet</a>
+              </h3>
+              <p>Android app for making simple deals between sellers/buyers of Animals and Animals in adoption.</p>
+              <p><b>Platform: </b> Android</p>
+              <p><b>Technologies</b>: Android SDK + JavaEE</p>
+          </div>
           <div class="col-md-4 portfolio-item">
               <a href="https://play.google.com/store/apps/details?id=com.ismaro3.conversor" target="_blank">
                   <img class="img-responsive" src="images/conversor.png" alt="">
@@ -202,6 +230,11 @@
               <p><b>Platform: </b> Android</p>
               <p><b>Technologies</b>: Android SDK</p>
           </div>
+
+
+
+        </div>
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://gbatemp.net/threads/game-crazy-golf.306987/" target="_blank">
                   <img class="img-responsive" src="images/crazygolf.png" alt="">
@@ -214,18 +247,17 @@
                <p><b>Platform: </b> Nintendo DS</p>
                <p><b>Technologies</b>: C + devkitPro + PAlib</p>
           </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="https://github.com/ismaro3/lifesgame" target="_blank">
-                    <img class="img-responsive" src="images/cells.png" alt="">
-                </a>
-                <h3>
-                    <a href="https://github.com/ismaro3/lifesgame" target="_blank">Conway's game of life</a>
-                </h3>
-                <p>Simple Java implementation of Conway's game of life.</p>
-                <p><b>Platform: </b> Windows/Linux/MacOS</p>
-                <p><b>Technologies</b>: Java</p>
-            </div>
-
+          <div class="col-md-4 portfolio-item">
+              <a href="https://github.com/ismaro3/lifesgame" target="_blank">
+                  <img class="img-responsive" src="images/cells.png" alt="">
+              </a>
+              <h3>
+                  <a href="https://github.com/ismaro3/lifesgame" target="_blank">Conway's game of life</a>
+              </h3>
+              <p>Simple Java implementation of Conway's game of life.</p>
+              <p><b>Platform: </b> Windows/Linux/MacOS</p>
+              <p><b>Technologies</b>: Java</p>
+          </div>
         </div>
         <!-- /.row -->
 
