Added font-awesome and stores4me project

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
 
     <title>Ismael Rodríguez</title>
 
@@ -73,12 +75,26 @@
         <!-- Projects Row -->
         <div class="row">
           <div class="col-md-4 portfolio-item">
+              <a href="http://devpost.com/software/stores4me" target="_blank">
+                  <img class="img-responsive" src="images/storesforme.png" alt="Stores for me!">
+              </a>
+              <h3>
+                <a href="http://devpost.com/software/stores4me" target="_blank">Stores for Me!</a>
+              </h3>
+              <p><i><i class="fa fa-trophy" aria-hidden="true"></i> HackUPC Winner of GFT Challenge</i></p>
+              <p>Heat map of bank transactions so customers can see where people like him/her (age, salary,...) buys more frequently.</p>
+
+              <p><b>Platform: </b> Web</p>
+              <p><b>Technologies</b>: AngularJS + NodeJS</p>
+          </div>
+          <div class="col-md-4 portfolio-item">
               <a href="https://github.com/borjaeg/keystone" target="_blank">
                   <img class="img-responsive" src="images/keystone.png" alt="Linked Data Hurricanes Info">
               </a>
               <h3>
                   <a href="https://github.com/borjaeg/keystone" target="_blank">Linked Data Hurricanes Info</a>
               </h3>
+              <p><i><i class="fa fa-trophy" aria-hidden="true"></i> Winner of Keystone Hackathon 2016 on Open and Linked Data</i></p>
               <p>Web application that shows in an interactive map the zones affected by hurricanes. For that, it uses Open and Linked Data from DBPedia and Geonames.
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Java Spark + Javascript</p>
@@ -95,6 +111,14 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Spring Framework (Java) + AngularJS</p>
           </div>
+
+
+
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/wallapoints" target="_blank">
                   <img class="img-responsive" src="images/wallapoints.png" alt="Wallapoints">
@@ -106,13 +130,6 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: NodeJS with Express + AngularJS</p>
           </div>
-
-
-        </div>
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://ismaro3.github.io/zgztram" target="_blank">
                   <img class="img-responsive" src="images/zgztram.png" alt="">
@@ -135,6 +152,17 @@
               <p><b>Platform: </b> Windows/Linux/MacOS</p>
               <p><b>Technologies</b>: Java</p>
           </div>
+
+
+
+
+
+
+
+        </div>
+
+        <!-- Projects Row -->
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/WallaTeam/FinApps15-App" target="_blank">
                   <img class="img-responsive" src="images/pocketshop.png" alt="PocketShop!">
@@ -146,16 +174,6 @@
               <p><b>Platform: </b> Android / Raspberry Pi</p>
               <p><b>Technologies</b>: Java, AngularJS + Ionic, Python</p>
           </div>
-
-
-
-
-
-
-        </div>
-
-        <!-- Projects Row -->
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/Twitter-Contest-Bot" target="_blank">
                   <img class="img-responsive" src="images/twitterbot.png" alt="">
@@ -179,6 +197,13 @@
               <p><b>Platform: </b> Android + iOS (Web)</p>
               <p><b>Technologies</b>: AngularJS + Ionic</p>
           </div>
+
+
+
+
+        </div>
+
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/WallaTeam/WallaLinks" target="_blank">
                   <img class="img-responsive" src="images/wallalinks.png" alt="">
@@ -190,12 +215,6 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Spring Framework (Java) + ExpressJS</p>
           </div>
-
-
-
-        </div>
-
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://2015.spaceappschallenge.org/project/cropper/" target="_blank">
                   <img class="img-responsive" src="images/cropper.png" alt="">
@@ -203,6 +222,7 @@
               <h3>
                   <a href="https://2015.spaceappschallenge.org/project/cropper/" target="_blank">Cropper</a>
               </h3>
+              <p><i><i class="fa fa-trophy" aria-hidden="true"></i> Local winner of Space Apps Zaragoza 2015</i></p>
               <p>A real-time collaborative social-network made for farmers who want to alert to other farmers of dangeours events,
                  like floods, storms, plagues, diseases, etc. </p>
                <p><b>Platform: </b> Web</p>
@@ -219,17 +239,7 @@
               <p><b>Platform: </b> Android</p>
               <p><b>Technologies</b>: Android SDK + JavaEE</p>
           </div>
-          <div class="col-md-4 portfolio-item">
-              <a href="https://play.google.com/store/apps/details?id=com.ismaro3.conversor" target="_blank">
-                  <img class="img-responsive" src="images/conversor.png" alt="">
-              </a>
-              <h3>
-                  <a href="https://play.google.com/store/apps/details?id=com.ismaro3.conversor" target="_blank">uConverter</a>
-              </h3>
-              <p>Simple, easy to use and complete Android app that helps you converting measuring units and currencies. Downloaded by 20,000 people around the world.</p>
-              <p><b>Platform: </b> Android</p>
-              <p><b>Technologies</b>: Android SDK</p>
-          </div>
+
 
 
 
@@ -257,6 +267,17 @@
               <p>Simple Java implementation of Conway's game of life.</p>
               <p><b>Platform: </b> Windows/Linux/MacOS</p>
               <p><b>Technologies</b>: Java</p>
+          </div>
+          <div class="col-md-4 portfolio-item">
+              <a href="https://play.google.com/store/apps/details?id=com.ismaro3.conversor" target="_blank">
+                  <img class="img-responsive" src="images/conversor.png" alt="">
+              </a>
+              <h3>
+                  <a href="https://play.google.com/store/apps/details?id=com.ismaro3.conversor" target="_blank">uConverter</a>
+              </h3>
+              <p>Simple, easy to use and complete Android app that helps you converting measuring units and currencies. Downloaded by 20,000 people around the world.</p>
+              <p><b>Platform: </b> Android</p>
+              <p><b>Technologies</b>: Android SDK</p>
           </div>
         </div>
         <!-- /.row -->
