Fixed links, added new experience

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
               <h3>
                 <a href="http://devpost.com/software/stores4me" target="_blank">Stores for Me!</a>
               </h3>
-              <p><i><i class="fa fa-trophy" aria-hidden="true"></i> HackUPC Winner of GFT Challenge</i></p>
+              <p><i><i class="fa fa-trophy" aria-hidden="true"></i> HackUPC Fall '16 Hackathon Winner of GFT Challenge</i></p>
               <p>Heat map of bank transactions so customers can see where people like him/her (age, salary,...) buys more frequently.</p>
 
               <p><b>Platform: </b> Web</p>
@@ -142,11 +142,11 @@
               <p><b>Technologies</b>: AngularJS</p>
           </div>
           <div class="col-md-4 portfolio-item">
-              <a href="https://ismaro3.github.io/Java-chip8-emulator" target="_blank">
+              <a href="https://github.com/ismaro3/Java-chip8-emulator" target="_blank">
                   <img class="img-responsive" src="images/chip8.png" alt="">
               </a>
               <h3>
-                  <a href="https://ismaro3.github.io/Java-chip8-emulator" target="_blank">Chip-8</a>
+                  <a href="https://github.com/ismaro3/Java-chip8-emulator" target="_blank">Chip-8</a>
               </h3>
               <p>A simple Chip-8 system emulator written in Java that runs all the available ROMs.</p>
               <p><b>Platform: </b> Windows/Linux/MacOS</p>
