--- a/index.html
+++ b/index.html
@@ -130,8 +130,11 @@
         </div>
 
 
-
         <div class="row" >
+          <div class="col-xs-3">October 2016</div>
+          <div class="col-xs-9">HackUPC Fall '16 participator at Barcelona.</div>
+        </div>
+        <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">July 2016</div>
           <div class="col-xs-9">Attendee at "Keyword search in Big Linked Data" summer course and Hackathon, CITIUS, Santiago de Compostela.</div>
         </div>
@@ -167,6 +170,12 @@
 
 
         <div class="row" >
+          <div class="col-xs-3">9 October 2016</div>
+          <div class="col-xs-9">GFT Prize in HackUPC Fall 2016 Hackaton thanks to the "Stores for me!" project with Raúl Piracés.
+          </div>
+          </div>
+
+        <div class="row" style="margin-top:20px;">
           <div class="col-xs-3">22 July 2016</div>
           <div class="col-xs-9">First Prize in Keystone Hackaton, "Keyword Search in Big Linked Data", with my team (Borja Espejo, Raúl Piracés and I).
           </div>
