Added Tecnara prize

--- a/index.html
+++ b/index.html
@@ -169,7 +169,14 @@
 
 
 
-        <div class="row" >
+
+      <div class="row" >
+        <div class="col-xs-3">27 October 2016</div>
+        <div class="col-xs-9">Winner of Best Final Degree Project Prize on Computer Engineering at Zaragoza 2016 by Tecnara, with my project Infoboxer.
+        </div>
+        </div>
+
+        <div class="row" style="margin-top:20px;" >
           <div class="col-xs-3">9 October 2016</div>
           <div class="col-xs-9">GFT Prize in HackUPC Fall 2016 Hackaton thanks to the "Stores for me!" project with Raúl Piracés.
           </div>
