--- a/projects.html
+++ b/projects.html
@@ -106,6 +106,8 @@
               <h3>
                   <a href="http://sid.cps.unizar.es/Infoboxer" target="_blank">Infoboxer</a>
               </h3>
+              <p><i><i class="fa fa-trophy" aria-hidden="true"></i> Winner of Best Final Degree Project Prize 2016 by Tecnara</i></p>
+
               <p><b>Final Degree Project</b></p>
               <p>System that helps users to create rich and accurate content for Knowledge Bases and Wikipedia Infoboxes, using statistical and semantic knowledge from linked data sources and the Semantic Web.</p>
               <p><b>Platform: </b> Web</p>
