--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,18 @@
         <!-- Projects Row -->
         <div class="row">
           <div class="col-md-4 portfolio-item">
+              <a href="https://github.com/albertomg994/Stock-Surfer" target="_blank">
+                  <img class="img-responsive" src="images/stocksurfer.png" alt="Stores for me!">
+              </a>
+              <h3>
+                <a href="https://github.com/albertomg994/Stock-Surfer" target="_blank">Stock Surfer</a>
+              </h3>
+              <p>Game where you have to surf the stock graphs of several enterprises and change among them to remain above of a minimum level.</p>
+
+              <p><b>Platform: </b> Web (Android, iOS, Windows Phone)</p>
+              <p><b>Technologies</b>: Javascript + Phaser</p>
+          </div>
+          <div class="col-md-4 portfolio-item">
               <a href="http://devpost.com/software/stores4me" target="_blank">
                   <img class="img-responsive" src="images/storesforme.png" alt="Stores for me!">
               </a>
@@ -99,6 +111,14 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: Java Spark + Javascript</p>
           </div>
+
+
+
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="http://sid.cps.unizar.es/Infoboxer" target="_blank">
                   <img class="img-responsive" src="images/infoboxer.png" alt="Infoboxer">
@@ -114,13 +134,6 @@
               <p><b>Technologies</b>: Spring Framework (Java) + AngularJS</p>
           </div>
 
-
-
-        </div>
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/wallapoints" target="_blank">
                   <img class="img-responsive" src="images/wallapoints.png" alt="Wallapoints">
@@ -143,6 +156,17 @@
               <p><b>Platform: </b> Web</p>
               <p><b>Technologies</b>: AngularJS</p>
           </div>
+
+
+
+
+
+
+
+        </div>
+
+        <!-- Projects Row -->
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/ismaro3/Java-chip8-emulator" target="_blank">
                   <img class="img-responsive" src="images/chip8.png" alt="">
@@ -155,16 +179,6 @@
               <p><b>Technologies</b>: Java</p>
           </div>
 
-
-
-
-
-
-
-        </div>
-
-        <!-- Projects Row -->
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/WallaTeam/FinApps15-App" target="_blank">
                   <img class="img-responsive" src="images/pocketshop.png" alt="PocketShop!">
@@ -188,24 +202,25 @@
               <p><b>Technologies</b>: Java</p>
           </div>
 
-          <div class="col-md-4 portfolio-item">
-              <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">
-                  <img class="img-responsive" src="images/sanlorenzo.png" alt="">
-              </a>
-              <h3>
-                  <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">San Lorenzo App</a>
-              </h3>
-              <p>Mobile app that contains an interactive guide of San Lorenzo festivities at Huesca. Includes maps, images and favourites among other information. Updated every year.</p>
-              <p><b>Platform: </b> Android + iOS (Web)</p>
-              <p><b>Technologies</b>: AngularJS + Ionic</p>
-          </div>
 
 
 
 
         </div>
-
         <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">
+                <img class="img-responsive" src="images/sanlorenzo.png" alt="">
+            </a>
+            <h3>
+                <a href="https://github.com/ismaro3/sanLorenzo-ionic" target="_blank">San Lorenzo App</a>
+            </h3>
+            <p>Mobile app that contains an interactive guide of San Lorenzo festivities at Huesca. Includes maps, images and favourites among other information. Updated every year.</p>
+            <p><b>Platform: </b> Android + iOS (Web)</p>
+            <p><b>Technologies</b>: AngularJS + Ionic</p>
+        </div>
+
+
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/WallaTeam/WallaLinks" target="_blank">
                   <img class="img-responsive" src="images/wallalinks.png" alt="">
@@ -230,6 +245,10 @@
                <p><b>Platform: </b> Web</p>
                <p><b>Technologies</b>: NodeJS + AngularJS</p>
           </div>
+            </div>
+
+
+        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://github.com/WallaTeam/Wallapet" target="_blank">
                   <img class="img-responsive" src="images/wallapet.png" alt="">
@@ -241,12 +260,6 @@
               <p><b>Platform: </b> Android</p>
               <p><b>Technologies</b>: Android SDK + JavaEE</p>
           </div>
-
-
-
-
-        </div>
-        <div class="row">
           <div class="col-md-4 portfolio-item">
               <a href="https://gbatemp.net/threads/game-crazy-golf.306987/" target="_blank">
                   <img class="img-responsive" src="images/crazygolf.png" alt="">
@@ -270,6 +283,9 @@
               <p><b>Platform: </b> Windows/Linux/MacOS</p>
               <p><b>Technologies</b>: Java</p>
           </div>
+        </div>
+          <div class="row">
+
           <div class="col-md-4 portfolio-item">
               <a href="https://play.google.com/store/apps/details?id=com.ismaro3.conversor" target="_blank">
                   <img class="img-responsive" src="images/conversor.png" alt="">
@@ -281,7 +297,9 @@
               <p><b>Platform: </b> Android</p>
               <p><b>Technologies</b>: Android SDK</p>
           </div>
+
         </div>
+
         <!-- /.row -->
 
         <hr>
