--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
 
 
         <div class="row" >
+          <div class="col-xs-3">November 2016</div>
+          <div class="col-xs-9">ImaginChallenge Games Edition '16 participator at Barcelona.</div>
+        </div>
+        <div class="row" style="margin-top:20px;" >
           <div class="col-xs-3">October 2016</div>
           <div class="col-xs-9">HackUPC Fall '16 participator at Barcelona.</div>
         </div>
